--- a/appendix_code.tex
+++ b/appendix_code.tex
@@ -1,4 +1,4 @@
-\chapter{Benchmark Programs}
+\chapter{Benchmark Programs}\label{app:code}
 
 This appendix describes the programs used to benchmark the tabling engines
 explored in this thesis. The program rules will be fully presented here and
@@ -52,13 +52,13 @@ path(X, Z) :- edge(X, Z).
 path(X, Z) :- path(X, Y), path(Y, Z).
 \end{Verbatim}
 
-\subsubsection*{same\_gen}
+\subsubsection*{samegen}
 
 \begin{Verbatim}
-:- table same_gen/2.
+:- table samegen/2.
 
-same_gen(X,X).
-same_gen(X,Y) :- edge(W, X), same_gen(W,Z), edge(Z, Y).
+samegen(X,X).
+samegen(X,Y) :- edge(W, X), samegen(W,Z), edge(Z, Y).
 \end{Verbatim}
 
 \subsubsection*{genome}
@@ -71,6 +71,24 @@ path(X, Z) :- edge(X, Z).
 path(X, Z) :- path(X, Y), edge(Y, Z).
 
 genome(X) :- path(1, X), path(2, X).
+\end{Verbatim}
+
+\subsubsection*{reach\_left\_first}
+
+\begin{Verbatim}   
+:- table reach/2.
+
+reach(X, Z) :- reach(X, Y), trans(Y, _, Z).
+reach(X, Z) :- trans(X, _, Z).
+\end{Verbatim}
+
+\subsubsection*{reach\_left\_last}
+
+\begin{Verbatim}
+:- table reach/2.
+
+reach(X, Z) :- trans(X, _, Z).
+reach(X, Z) :- reach(X, Y), trans(Y, _, Z).
 \end{Verbatim}
 
 \section{Facts}
@@ -126,4 +144,67 @@ edge(2,4).
 edge(2,5).
 edge(3,6).
 edge(3,7).
+\end{Verbatim}
+
+\subsubsection*{grid}
+
+A set of graph nodes forming a grid configuration.
+
+An example with two nodes:
+
+\begin{Verbatim}
+edge(1,2).
+edge(2,1).
+edge(3,4).
+edge(4,3).
+edge(1,3).
+edge(3,1).
+edge(2,4).
+edge(4,2).
+\end{Verbatim}
+
+\subsubsection*{leader}
+
+Leader election specification defined for 5 processes.
+
+\begin{Verbatim}
+% the transition relation graph trans(par(A,end,end,B),nop,B).
+trans(par(A,B,C,D),E,par(A,F,G,D)) :-
+   (partrans(A,E,B,C,F,G);partrans(A,E,C,B,G,F)).
+trans(medium_0(A,B,C,D),
+   in(A,E),medium_0(A,B,[E|C],D)).
+...
+% auxiliary predicates
+...
+\end{Verbatim}
+
+\subsubsection*{sieve}
+
+Sieve specification defined for 5 processes and 4 overflow prime numbers.
+
+\begin{Verbatim}
+% the transition relation graph trans(par(A,end,end,B),nop,B).
+trans(par(A,B,C,D),E,par(A,F,G,D)) :-
+   (partrans(A,E,B,C,F,G);partrans(A,E,C,B,G,F)).
+trans(generator_0(A,B,C,D),out(A,B),D) :-
+   E is B+1, not B=<C.
+...
+% auxiliary predicates
+...
+\end{Verbatim}
+
+\subsubsection*{iproto}
+
+Specification for the i-protocol defined for a correct version with a huge window size.
+
+\begin{Verbatim}
+fixed(fix).
+
+% the transition relation graph trans(par(A,end,end,B),nop,B).
+trans(par(A,B,C,D),E,par(A,F,G,D)) :-
+   (partrans(A,E,B,C,F,G);partrans(A,E,C,B,G,F)). 
+trans(iproto_0(A,B,C),nop,imain_0(C)).
+...
+% auxiliary predicates
+...
 \end{Verbatim}
